views/css/inline_style.css
*{
-webkit-box-sizing:border-box;
-moz-box-sizing:border-box;
-box-sizing:border-box
}

#heroImage{
content:url(/views/images/conformed/pizzeria2.jpg)
}
img{
vertical-align:middle
}
.img-responsive{
display:block;width:100%\9;
max-width:100%;
height:auto
}
.container{
margin-right:auto;
margin-left:auto;
padding-left:15px;
padding-right:15px;
background-color:rgba(240,60,60,.8);
overflow:hidden
}
.row{
margin-left:-15px;
margin-right:-15px
}
.col-md-10,
.col-md-12,
.col-md-4,
.col-md-6,
.col-md-8{
position:relative;
min-height:1px;
padding-left:15px;
padding-right:15px
}
body,ul{
font-family:"Trebuchet MS",Helvetica,sans-serif;
font-size:14px
}
body{
background:#000
}
input{
background:grey;
font-size:1.3em
}
form{
display:inline-block
}
.centered{
text-align:center
}
#pizzaSize{
font-weight:800
}
.mover{
position:fixed;
width:256px;
will-change: tansform;
z-index:-1;
}
#randomPizzas {
	margin-left: -30px;
	padding-right: 45px;
}
.randomPizzaContainer{
float:left;display:flex
}
.randomPizzaContainer:after{
content:"";display:table;clear:both;margin-left: -9px;
}
.clearfix:after,
.clearfix:before,
.container:after,
.container:before,
.row:after,
.row:before{
content:" ";display:table
}
.clearfix:after,
.container:after,
.row:after{
clear:both
}

@media (min-width:860px){
#heroImage{
content:url(/views/images/conformed/pizzeria.jpg)
}
.container{
width:860px
}
.col-md-10,.col-md-12,.col-md-4,.col-md-6,.col-md-8{
float:left
}
.col-md-12{width:100%}
.col-md-10{width:83.33333333%}
.col-md-8{width:66.66666667%}
.col-md-6{width:50%}
.col-md-4{width:33.33333333%}
.col-md-push-3{left:25%}
.col-md-push-2{left:16.66666667%}
}

